# secure-gate

./: .gitattributes  .gitignore  CHANGELOG.md  CT_EQ_AUTO.md  Cargo.toml  CUserschadmProjectssecure-gatetestsserde_tests.rs  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  MIGRATING_FROM_SECRECY.md  README  README.md  README_V2.md  ROADMAP.md  SECURITY.md  SECURITY_HASH_EQ.md  SECURITY_V2.md  USAGE.md  ZERO_COST_WRAPPERS.md  docs_home.md  lib.rs  machete.txt  package_it.py  rust-toolchain.toml  test_all.sh  test_partial_eq.rs
.github/workflows/: audit.yml  ci release.yml  ci.yml  dse-check.yml  fuzz-miri.yml  fuzz-nightly-0.8-core.yml  fuzz-nightly-0.9-compat.yml  fuzz-nightly-0.9-core.yml  fuzz-nightly-lts.yml  fuzz-nightly.yml  fuzz-quick.yml  fuzz.yml
benches/: cargo_bech_fixed_vs_raw_results_20260126.md  cargo_bench_ct_eq_auto_results_20260126..md  cargo_bench_hash_vs_std_results_20260126.md  ct_eq_auto.rs  ct_eq_hash_vs_ct_eq.rs  ct_eq_hash_vs_standard.rs  dynamic_vs_raw.rs  fixed_vs_raw.rs  hash_eq_vs_ct_eq.rs  serde.rs
code_packages/: 20260123_093447_secure-gate_src.txt  20260124_190614_secure-gate_src.txt
docs/: encoding_upgrades.md  recommended_cloneable_improvements.md  recommended_macro_improvements.md  recommended_serializable_improvements.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clone.rs  compat_v08.rs  compat_v10.rs  ct_eq.rs  debug.rs  drop.rs  encoding.rs  expose.rs  expose_enhancement.txt  mut.rs  parsing.rs  parsing_enhancement.txt  serde.rs  serde_enhancement.txt  zeroizing.rs
fuzz/src/: arbitrary.rs
scripts/: package_it.py
secure-gate-compat/: CHANGELOG.md  Cargo.toml  MIGRATING_FROM_SECRECY.md  README.md  SECURITY.md
secure-gate-compat/.github/workflows/: ci.yml  fuzz-miri.yml  fuzz-nightly-compat.yml  fuzz-quick.yml
secure-gate-compat/fuzz/: Cargo.toml
secure-gate-compat/fuzz/fuzz_targets/: compat_v08.rs  compat_v10.rs
secure-gate-compat/scripts/: package_it.py
secure-gate-compat/src/: lib.rs
secure-gate-compat/src/compat/: mod.rs  v08.rs  v10.rs
secure-gate-compat/tests/: common.rs  finding5_regression.rs  integration.rs  migration_full.rs
secure-gate-compat/tests/compat_dual/: divergence.rs  macros.rs  parity_v08.rs  parity_v10.rs
secure-gate-compat/tests/compat_suite/: edge_cases.rs  examples.rs  mod.rs  round_trip.rs  v08.rs  v10.rs
secure-gate-compat/tests/compile-fail/: compat_no_asref.rs  compat_no_debug_without_marker.rs  compat_no_debug_without_marker.stderr  compat_no_deref.rs  compat_no_deref.stderr  fixed_alias_zero_size.rs
secure-gate-compat/tests/proptest_suite/: encoding.rs  mod.rs  proptest_compat.rs
secure-gate-core/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  ZERO_COST_WRAPPERS.md
secure-gate-core/.github/workflows/: ci.yml  fuzz-miri.yml  fuzz-nightly.yml
secure-gate-core/benches/: dynamic_vs_raw.rs  fixed_vs_raw.rs  serde.rs
secure-gate-core/docs/: recommended_cloneable_improvements.md  recommended_improvements_20260121_1059.md  restructuring.md  security_hash_eq.md
secure-gate-core/fuzz/: Cargo.toml
secure-gate-core/fuzz/fuzz_targets/: compat_v08.rs  compat_v10.rs  ct_eq.rs  expose.rs  mut.rs  parsing.rs  serde.rs
secure-gate-core/fuzz/src/: lib.rs
secure-gate-core/scripts/: package_it.py
secure-gate-core/src/: dynamic.rs  error.rs  fixed.rs  lib.rs
secure-gate-core/src/macros/: dynamic_alias.rs  dynamic_generic_alias.rs  fixed_alias.rs  fixed_generic_alias.rs  mod.rs
secure-gate-core/src/traits/: cloneable_secret.rs  constant_time_eq.rs  mod.rs  reveal_secret.rs  reveal_secret_mut.rs  sentinel_value.rs  serializable_secret.rs
secure-gate-core/src/traits/decoding/: base64_url.rs  bech32.rs  bech32m.rs  hex.rs  mod.rs
secure-gate-core/src/traits/encoding/: base64_url.rs  bech32.rs  bech32m.rs  hex.rs  mod.rs
secure-gate-core/src/traits/revealed_secrets/: encoded_secret.rs  inner_secret.rs  mod.rs
secure-gate-core/tests/: asm_dse_check.rs  compile_fail_tests.rs  core_tests.rs  ct_eq_tests.rs  encoded_secret.rs  error_tests.rs  heap_zeroize.rs  integration.rs  zeroize_tests.rs
secure-gate-core/tests/compile-fail/: compat_no_asref.rs  compat_no_asref.stderr  dynamic_string_no_hex.rs  dynamic_string_no_hex.stderr  fixed_alias_zero_size.stderr  serializable_secret_misuse.stderr
secure-gate-core/tests/encoding_suite/: base64.rs  bech32.rs  hex.rs  mod.rs
secure-gate-core/tests/macros_suite/: dynamic.rs  dynamic_generic.rs  fixed.rs  fixed_generic.rs  mod.rs
secure-gate-core/tests/proptest_suite/: ct_eq.rs  encoding.proptest-regressions  mod.rs  serde.rs
secure-gate-core/tests/revealed_secrets_suite/: inner_secret.rs  mod.rs
secure-gate-core/tests/serde_suite/: deserialize.rs  roundtrip.rs
src/: aliases.rs  compat.rs  constant_time_eq_trait.rs  conversions.rs  conversions.rs.new  ct_eq.rs  deprecated.rs  dynamic.rs  eq.rs  error.rs  exportable.rs  fixed.rs  fixed.rs.new  fixed_stack.rs  heap.rs  lib.rs  macros.rs  no_clone.rs  no_clone.rs.new  password.rs  private.rs  random.rs  rng.rs  rng.rs.new  secure_gate.rs  secure_gate.rs.bak  secure_gate_2.rs.bak  secure_types.rs  serde.rs  stack.rs  temp.rs  traits.rs  utilities.rs  zeroize.rs
src/cloneable/: array.rs  cloneable_secret.rs  marker.rs  mod.rs  secret_marker.rs  string.rs  vec.rs
src/compat/: mod.rs  v10.rs
src/encoding/: base64.rs  bech32.rs  (+6 more)
tests/: alias_trait_tests.rs  basic_tests.rs  clone_tests.rs  cloneable_secret_tests.rs  cloneable_tests.rs  common.rs  compat_tests.rs  compat_v08_tests.rs  compat_v10_tests.rs  compile_fail_tests.rs  compile_fail_tests.rs.hold  conversions_edge_cases_tests.rs  conversions_tests.rs  core_tests.rs  ct_eq_auto.rs  ct_eq_hash_tests.rs  ct_eq_test.rs  ct_eq_tests.rs  deprecated_warnings.rs  dynamic_tests.rs  encoding_tests.rs  eq_tests.rs  error_tests.rs  exportable_tests.rs  fixed_tests.rs  hash_eq_tests.rs  heap_zeroize.rs  insecure_tests.rs  integration.rs  lib_tests.rs  macros_correctness_tests.rs  macros_tests.rs  migration_full.rs  mode_tests.rs  new.rs  new_2_tests.rs  new_tests.rs  no_alloc_tests.rs  no_clone_edge_cases_tests.rs  no_clone_tests.rs  (+14 more)
(+210 files in other folders)
