[package]
name = "secure-gate"
version = "0.9.0-rc.4-dev"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Secure wrappers for secrets with explicit access and mandatory zeroization — no_std-compatible, zero-overhead library with audit-friendly access patterns."
repository = "https://github.com/Slurp9187/secure-gate"
documentation = "https://docs.rs/secure-gate"
keywords = ["crypto", "no-std", "security", "zeroize"]
categories = ["cryptography", "no-std", "data-structures"]
include = [
    "src/**/*.rs",
    "CHANGELOG.md",
    "LICENSE*",
    "MIGRATING_FROM_SECRECY.md",
    "README.md",
    "SECURITY.md",
]

[dependencies]
base64 = { version = "0.22", optional = true }
bech32 = { version = "0.11", default-features = false, optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.10", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
subtle = { version = "2.6", optional = true }
thiserror = "2.0"
zeroize = { version = "1.8", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.10"
serde_json = "1.0"
trybuild = "1.0"
# Dual-parity testing baselines — pinned exact versions matching local source clones.
# These compile as dev-deps always; the dual-compat-test feature gates the test module.
secrecy-v08 = { package = "secrecy", version = "=0.8.0" }
secrecy-v10 = { package = "secrecy", version = "=0.10.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: give users the most useful experience out of the box
default = ["alloc"]

# Enables heap allocation (Dynamic<T>, Box, Vec, String) + full zeroization of spare capacity
alloc = ["zeroize/alloc"]

# Full std support (implies alloc)
std = ["alloc"]

# Rand: secure random generation
rand = ["dep:rand"]

# ct-eq: constant-time equality (subtle)
ct-eq = ["dep:subtle"]

# Encoding features
encoding = [
  "encoding-hex",
  "encoding-base64",
  "encoding-bech32",
  "encoding-bech32m",
]
encoding-hex = ["dep:hex", "hex?/alloc", "alloc"]
encoding-base64 = ["dep:base64", "base64?/alloc", "alloc"]
encoding-bech32 = ["dep:bech32", "bech32?/alloc", "alloc"]
encoding-bech32m = ["dep:bech32", "bech32?/alloc", "alloc"]

# Cloneable: opt-in cloning
cloneable = []

# Serde: meta-feature for both directions
serde = ["serde-deserialize", "serde-serialize"]
serde-deserialize = ["dep:serde", "serde?/alloc", "alloc"]
serde-serialize = ["dep:serde", "serde?/alloc", "alloc"]

# Full batteries-included combo (most common real-world usage)
full = ["alloc", "rand", "encoding", "ct-eq", "cloneable", "serde"]

# secrecy compatibility shims — drop-in replacements for secrecy v0.8.0 and v0.10.1.
# Enables `secure_gate::compat::v10` (SecretBox/SecretString/SecretSlice) and
# `secure_gate::compat::v08` (Secret/SecretString/SecretVec/DebugSecret).
# Shared traits (ExposeSecret, CloneableSecret, zeroize re-export) live in compat root.
# See `src/compat/` for the full migration guides and
# `tests/compat_suite/` for the exhaustive migration test suite.
secrecy-compat = ["alloc"]

# Enables side-by-side parity tests in tests/compat_dual/ that run the exact same
# test body against both the real `secrecy` crate and the compat shim, proving drop-in
# identity. Implies secrecy-compat. Real secrecy dev-deps are always compiled (they are
# ordinary dev-dependencies); this feature just activates the test module.
dual-compat-test = ["secrecy-compat"]

[[test]]
name = "migration_full"
path = "tests/migration_full.rs"
harness = false

[[bench]]
name = "fixed_vs_raw"
harness = false

[[bench]]
name = "dynamic_vs_raw"
harness = false

[[bench]]
name = "serde"
harness = false
