[workspace]
members = [
    "secure-gate-core",
    "secure-gate-compat",
]
resolver = "2"

[workspace.package]
version = "0.8.0-rc.7-dev"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slurp9187/secure-gate/tree/release/0.8"
documentation = "https://docs.rs/secure-gate"
keywords = ["crypto", "no-std", "security", "zeroize"]
categories = ["cryptography", "no-std", "data-structures"]
