[package]
name = "secure-gate-fuzz"
version = "0.1.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
secure-gate = { path = "../", features = ["zeroize", "rand", "encoding", "serde"] }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Required for zeroize::Zeroize usage in fuzz targets
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

serde_json = "1.0"
serde = "1.0"

[features]
default = ["zeroize", "rand", "encoding"]

zeroize = ["secure-gate/zeroize"]
rand = ["secure-gate/rand"]
ct-eq = ["secure-gate/ct-eq"]
encoding = ["secure-gate/encoding"]
encoding-hex = ["secure-gate/encoding-hex"]
encoding-base64 = ["secure-gate/encoding-base64"]
encoding-bech32 = ["secure-gate/encoding-bech32"]

[[bin]]
name = "expose"
path = "fuzz_targets/expose.rs"
test = false
bench = false
doc = false

[[bin]]
name = "mut"
path = "fuzz_targets/mut.rs"
test = false
bench = false
doc = false

[[bin]]
name = "parsing"
path = "fuzz_targets/parsing.rs"
test = false
bench = false
doc = false

[[bin]]
name = "serde"
path = "fuzz_targets/serde.rs"
test = false
bench = false
doc = false
