[package]
name = "secure-gate-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compatibility layer providing drop-in secrecy shims for secure-gate"
repository = "https://github.com/Slurp9187/secure-gate/tree/main/secure-gate-compat"
documentation = "https://docs.rs/secure-gate-compat"
keywords = ["crypto", "no-std", "security", "zeroize", "secrecy", "compat"]
categories = ["cryptography", "no-std", "data-structures"]
include = [
    "src/**/*.rs",
    "CHANGELOG.md",
    "LICENSE*",
    "MIGRATING_FROM_SECRECY.md",
    "README.md",
    "SECURITY.md",
]

[dependencies]
secure-gate = { path = "../secure-gate-core", version = "0.9.0-rc.6" }
zeroize = { version = "1.8", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
# Dual-parity testing baselines — pinned exact versions matching local source clones.
# These compile as dev-deps always; the dual-compat-test feature gates the test module.
secrecy-v08 = { package = "secrecy", version = "=0.8.0" }
secrecy-v10 = { package = "secrecy", version = "=0.10.1" }
trybuild = "1.0"
serde_json = "1.0"
proptest = "1.10"

[features]
# secrecy compatibility shims — drop-in replacements for secrecy v0.8.0 and v0.10.1.
# Enables `secure_gate::compat::v10` (SecretBox/SecretString/SecretSlice) and
# `secure_gate::compat::v08` (Secret/SecretString/SecretVec/DebugSecret).
# Shared traits (ExposeSecret, CloneableSecret, zeroize re-export) live in compat root.
# See `src/compat/` for the full migration guides and
# `tests/compat_suite/` for the exhaustive migration test suite.
secrecy-compat = ["secure-gate/alloc", "secure-gate/cloneable", "secure-gate/serde-serialize", "serde"]

# Enables side-by-side parity tests in tests/compat_dual/ that run the exact same
# test body against both the real `secrecy` crate and the compat shim, proving drop-in
# identity. Implies secrecy-compat. Real secrecy dev-deps are always compiled (they are
# ordinary dev-dependencies); this feature just activates the test module.
dual-compat-test = ["secrecy-compat"]

alloc = ["secure-gate/alloc"]
ct-eq = ["secure-gate/ct-eq"]
serde-deserialize = ["secure-gate/serde-deserialize"]
serde-serialize = ["secure-gate/serde-serialize"]
serde = ["dep:serde"]

[[test]]
name = "migration_full"
path = "tests/migration_full.rs"
harness = false
