[package]
name = "secure-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Secure wrappers for secrets with explicit access and mandatory zeroization — no_std-compatible, zero-overhead library with audit-friendly access patterns."
documentation = "https://docs.rs/secure-gate"
keywords = ["crypto", "no-std", "security", "zeroize"]
categories = ["cryptography", "no-std", "data-structures"]
include = [
    "src/**/*.rs",
    "CHANGELOG.md",
    "LICENSE*",
    "README.md",
    "SECURITY.md",
]

[dependencies]
base16ct = { version = "1", optional = true, default-features = false }
base64ct = { version = "1", optional = true, default-features = false }
bech32 = { version = "0.11", default-features = false, optional = true }
# `sys_rng` provides `rngs::SysRng` without pulling `std`; the `TryRng` /
# `TryCryptoRng` traits come from `rand_core` and are always available.
# On bare-metal targets `getrandom` additionally requires a user-configured
# backend (see the `rand` feature docs in lib.rs).
rand = { version = "0.10", optional = true, default-features = false, features = ["sys_rng"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
# default-features = false: subtle's default `std` feature would silently break
# no_std builds; nothing in this crate needs it.
subtle = { version = "2.6", optional = true, default-features = false }
# default-features = false: thiserror's default `std` feature would silently break
# no_std builds; error trait impls use core::error::Error (stable since 1.81).
thiserror = { version = "2.0", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.10"
# `std_rng` adds `rngs::StdRng` for deterministic tests and doctests without
# forcing it (or `std`) on downstream users of the library's `rand` feature.
rand = { version = "0.10", default-features = false, features = ["std_rng", "sys_rng"] }
serde_json = "1.0"
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: give users the most useful experience out of the box
default = ["alloc"]

# Enables heap allocation (Dynamic<T>, Box, Vec, String) + full zeroization of spare capacity.
# Also activates the alloc-dependent APIs of optional encoding crates (encode_string,
# decode_vec, encode_lower) when those crates are already in the dependency graph.
alloc = [
    "zeroize/alloc",
    "base16ct?/alloc",
    "base64ct?/alloc",
    "bech32?/alloc",
]

# Full std support (implies alloc). Enables std::io::Read/Write for Dynamic<Vec<u8>>.
std = ["alloc"]

# Rand: secure random generation
rand = ["dep:rand"]

# ct-eq: constant-time equality (subtle)
ct-eq = ["dep:subtle"]

# Encoding features
encoding = [
  "encoding-hex",
  "encoding-base64",
  "encoding-bech32",
  "encoding-bech32m",
]
encoding-hex = ["dep:base16ct"]
encoding-base64 = ["dep:base64ct"]
encoding-bech32 = ["dep:bech32"]
encoding-bech32m = ["dep:bech32"]

# Cloneable: opt-in cloning
cloneable = []

# Serde: meta-feature for both directions
serde = ["serde-deserialize", "serde-serialize"]
serde-deserialize = ["dep:serde", "serde?/alloc", "alloc"]
serde-serialize = ["dep:serde", "serde?/alloc", "alloc"]

# Full batteries-included combo (most common real-world usage)
full = ["alloc", "rand", "encoding", "ct-eq", "cloneable", "serde"]

[[bin]]
name = "asm_check"
# Not a user-facing tool. Exists solely for the asm_dse_check integration test.
# `required-features` keeps this std-using binary out of no_std target builds
# (e.g. `cargo build --target thumbv7em-none-eabihf --no-default-features`).
required-features = ["std"]

[[bench]]
name = "fixed_vs_raw"
harness = false

[[bench]]
name = "dynamic_vs_raw"
harness = false

[[bench]]
name = "serde"
harness = false
