[package]
name = "secure-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "Secure wrappers for secrets with explicit access and mandatory zeroization — no_std-compatible, zero-overhead library with audit-friendly access patterns."
repository = "https://github.com/Slurp9187/secure-gate/tree/release/0.8"
documentation = "https://docs.rs/secure-gate/0.8.0"
keywords = ["crypto", "no-std", "security", "zeroize"]
categories = ["cryptography", "no-std", "data-structures"]
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "CHANGELOG.md",
    "LICENSE*",
    "README.md",
    "SECURITY.md",
]

[dependencies]
base16ct = { version = "0.2", optional = true, default-features = false }
base64ct = { version = "=1.6.0", optional = true, default-features = false }
bech32 = { version = "0.11", default-features = false, optional = true }
# `os_rng` provides `rngs::OsRng` without pulling `std`; the `TryRngCore` /
# `TryCryptoRng` traits come from `rand_core` and are always available.
# On bare-metal targets `getrandom` additionally requires a user-configured
# backend (see the `rand` feature docs in lib.rs).
rand = { version = "0.9", optional = true, default-features = false, features = [
    "os_rng",
] }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
# default-features = false: subtle's default `std` feature would silently break
# no_std builds; nothing in this crate needs it.
subtle = { version = "2.5", optional = true, default-features = false }
# NOTE (0.8 LTS): unlike main, this branch does NOT use thiserror. Its no_std
# support requires core::error::Error (Rust 1.81+), above our MSRV 1.70, so
# error.rs hand-writes Display and a std-gated std::error::Error impl instead.
zeroize = { version = "1.7", default-features = false, features = [
    "zeroize_derive",
] }

[dev-dependencies]
bincode = "1.0"
# criterion >=0.5 pulls transitive deps that break 1.70 (e.g. clap >=4.5/rayon-core >=1.13).
criterion = { version = "=0.4.0", features = ["html_reports"] }
# proptest >=1.10 requires newer rustc (1.84+); keep 1.70-compatible line.
proptest = "=1.0.0"
# `std_rng` adds `rngs::StdRng` for deterministic tests and doctests without
# forcing it (or `std`) on downstream users of the library's `rand` feature.
rand = { version = "0.9", default-features = false, features = [
    "std_rng",
    "os_rng",
] }
# serde_json >=1.0.149 pulls `zmij` (rustc 1.71+); pin to pre-zmij release.
serde_json = "=1.0.132"
# syn >=2.0.117 declares rust-version 1.71; pin for MSRV 1.70 (serde_derive, thiserror-impl).
syn = "=2.0.100"
# newer trybuild pulls `toml` 1.x (`toml_parser` edition 2024), which Cargo 1.70 cannot parse.
trybuild = "=1.0.81"
# tempfile >=3.27 pulls getrandom 0.4 (edition 2024); Cargo 1.70 cannot parse that manifest.
tempfile = "=3.10.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: give users the most useful experience out of the box
default = ["alloc"]

# Enables heap allocation (Dynamic<T>, Box, Vec, String) + full zeroization of spare capacity.
# Also activates the alloc-dependent APIs of optional encoding crates (encode_string,
# decode_vec, encode_lower) when those crates are already in the dependency graph.
alloc = ["zeroize/alloc", "base16ct?/alloc", "base64ct?/alloc", "bech32?/alloc"]

# Full std support (implies alloc). Enables std::io::Read/Write for Dynamic<Vec<u8>>.
std = ["alloc"]

# Rand: secure random generation
rand = ["dep:rand"]

# ct-eq: constant-time equality (subtle)
ct-eq = ["dep:subtle"]

# Encoding features
encoding = [
    "encoding-hex",
    "encoding-base64",
    "encoding-bech32",
    "encoding-bech32m",
]
encoding-hex = ["dep:base16ct"]
encoding-base64 = ["dep:base64ct"]
encoding-bech32 = ["dep:bech32"]
encoding-bech32m = ["dep:bech32"]

# Cloneable: opt-in cloning
cloneable = []

# Serde: meta-feature for both directions
serde = ["serde-deserialize", "serde-serialize"]
serde-deserialize = ["dep:serde", "serde?/alloc", "alloc"]
serde-serialize = ["dep:serde", "serde?/alloc", "alloc"]

# Full batteries-included combo (most common real-world usage)
full = ["alloc", "rand", "encoding", "ct-eq", "cloneable", "serde"]

[[bin]]
name = "asm_check"
# Not a user-facing tool. Exists solely for the asm_dse_check integration test.
# `required-features` keeps this std-using binary out of no_std target builds
# (e.g. `cargo build --target thumbv7em-none-eabihf --no-default-features`).
required-features = ["std"]

[[bench]]
name = "fixed_vs_raw"
harness = false

[[bench]]
name = "dynamic_vs_raw"
harness = false

[[bench]]
name = "serde"
harness = false
