[workspace]

[package]
name = "secure-gate-fuzz"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
secure-gate = { path = "../../secure-gate-core", features = ["full"] }
secure-gate-compat = { path = "..", features = ["secrecy-compat"] }
arbitrary = { version = "1.4", features = ["derive"] }
libfuzzer-sys = "0.4"

# Required for zeroize::Zeroize usage in fuzz targets
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

serde_json = "1.0"
serde = "1.0"

# Direct deps for encoding round-trip verification
hex = "0.4"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }

[features]
default = ["rand", "ct-eq", "encoding", "serde", "encoding-bech32m", "cloneable"]

rand = ["secure-gate/rand"]
ct-eq = ["secure-gate/ct-eq"]
encoding = ["secure-gate/encoding"]
encoding-hex = ["secure-gate/encoding-hex"]
encoding-base64 = ["secure-gate/encoding-base64"]
encoding-bech32 = ["secure-gate/encoding-bech32"]
encoding-bech32m = ["secure-gate/encoding-bech32m"]
serde = ["secure-gate/serde"]
cloneable = ["secure-gate/cloneable"]
secrecy-compat = ["secure-gate-compat/secrecy-compat"]
full = ["secure-gate/full", "secrecy-compat"]

[[bin]]
name = "compat_v08"
path = "fuzz_targets/compat_v08.rs"
test = false
bench = false
doc = false

[[bin]]
name = "compat_v10"
path = "fuzz_targets/compat_v10.rs"
test = false
bench = false
doc = false
